--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "friendsofsymfony/rest-bundle": "3.1.0",
         "lexik/jwt-authentication-bundle": "^2.19",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.24",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.4.*",
