--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,8 +19,9 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-    
-    # App\Service\UserService:
-        # public: true       
+
+    App\Command\ImportExcelCommand:
+        tags:
+            - { name: 'console.command', command: 'app:import-excel' }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
